FIX: try to fix view-transition on ios

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ html {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
     text-size-adjust: 100%;
+    background-color: #bc0839;
 }
 
 body,
